--- a/src/main/webapp/bsteeleMusicApp.html
+++ b/src/main/webapp/bsteeleMusicApp.html
@@ -41,7 +41,7 @@
       </div>
     </noscript>
 
-    <h1>bsteele Music App</h1>
+    <h1>bsteele Music App test checkin</h1>
 
     <table align="center">
       <tr>
