--- a/src/main/webapp/bsteeleMusicApp.html
+++ b/src/main/webapp/bsteeleMusicApp.html
@@ -52,6 +52,9 @@
         <td id="sendButtonContainer"></td>
       </tr>
       <tr>
+        <td id="bpmTapButtonContainer"></td>
+      </tr>
+      <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
