attempted super dev mode

--- a/src/main/webapp/bsteeleMusicApp.html
+++ b/src/main/webapp/bsteeleMusicApp.html
@@ -24,6 +24,12 @@
     <!-- be added before this line.                -->
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>
+    
+    <script>
+        function log( arg ){
+            window.log(arg);
+        }
+    </script>
   </head>
 
   <!--                                           -->
@@ -41,7 +47,7 @@
       </div>
     </noscript>
 
-    <h1>bsteele Music App test checkin</h1>
+    <h1>bsteele Music App test</h1>
 
     <table align="center">
       <tr>
@@ -58,5 +64,9 @@
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
+    here bob "
+    <div onload="window.log('javasript here' );"></div>
+    "here
+    
   </body>
 </html>
