got super dev mode working by: use maven "super dev mode" browser to: http://127.0.0.1:8888/bsteeleMusicApp.html

--- a/src/main/webapp/bsteeleMusicApp.html
+++ b/src/main/webapp/bsteeleMusicApp.html
@@ -47,7 +47,7 @@
       </div>
     </noscript>
 
-    <h1>bsteele Music App test</h1>
+    <h1>bsteele Music App dude</h1>
 
     <table align="center">
       <tr>
