--- a/src/main/webapp/bsteeleMusicApp.html
+++ b/src/main/webapp/bsteeleMusicApp.html
@@ -23,11 +23,11 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>
+    <script type="text/javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>
     
     <script>
         function log( arg ){
-            window.log(arg);
+            window.console.log(arg);
         }
     </script>
   </head>
@@ -59,14 +59,12 @@
       </tr>
       <tr>
         <td id="bpmTapButtonContainer"></td>
+        <td>commit test</td>
       </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
-    here bob "
-    <div onload="window.log('javasript here' );"></div>
-    "here
     
   </body>
 </html>
