--- a/src/main/webapp/bsteeleMusicApp.html
+++ b/src/main/webapp/bsteeleMusicApp.html
@@ -59,7 +59,7 @@
       </tr>
       <tr>
         <td id="bpmTapButtonContainer"></td>
-        <td>commit test</td>
+        <td>commit test done</td>
       </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
