--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1152,140 +1152,10 @@ Beat vs measure resolution on a section basis
                 songs.push(song);
             }
 
-//            function test() {
-//                for (var i = 0; i < songs.length; i++)
-//                {
-//                    var song = songs[i];
-//                    log("\n");
-//                    log(song.name);
-//
-//                    var a = document.getElementById(song.id);
-//
-//                    var chords = a.getElementsByClassName("chords")[0].innerHTML;
-//
-//                    log(transcribe(chords, halfstepChange));
-//                }
-//            }
-
             function transcribe(chords, halfsteps) {
-                clientSong.transcribe(chords, halfsteps);
-
-                var chordNumber;
-                var sout = "";
-                var state = 0;
-                for (var ci = 0; ci < chords.length; ci++) {
-                    var c = chords[ci];
-                    switch (state) {
-                        case 1:	//  chord symbol modifier, one character only
-                            state = 0;
-                            if (c === 'b' || c === js_flat) {
-                                chordNumber -= 1;
-                                sout += chordNumberToLetter(chordNumber + halfsteps);
-                                break;
-                            }
-                            if (c === '#' || c === js_sharp) {
-                                chordNumber += 1;
-                                sout += chordNumberToLetter(chordNumber + halfsteps);
-                                break;
-                            }
-                            if (c === js_natural) {
-                                sout += chordNumberToLetter(chordNumber + halfsteps);
-                                break;
-                            }
-                            sout += chordNumberToLetter(chordNumber + halfsteps);
-                            //	fall through
-                        default:
-                        case 0:
-                            if (c === '(') {
-                                sout += c;
-                                state = 11;
-                                break;
-                            }
-
-                            //  don't transcribe the section identifiers that happen to look like notes
-                            let sub = chords.substr(ci, 5);
-                            if (/^Coda:/i.test(sub)) {
-                                sout += sub;
-                                ci += sub.length - 1; //  skip the end of the section id
-                                break;
-                            }
-                            sub = chords.substr(ci, 4);
-                            if (/^Out:/i.test(sub)) {
-                                sout += sub;
-                                ci += sub.length - 1; //  skip the end of the section id
-                                break;
-                            }
-                            sub = chords.substr(ci, 3);
-                            if (/^Ch:/i.test(sub) || /^Co:/i.test(sub) || /^C:/i.test(sub) || /^Br:/i.test(sub) || /^Pc:/i.test(sub)) {
-                                sout += sub;
-                                ci += sub.length - 1; //  skip the end of the section id
-                                break;
-                            }
-                            sub = sub.substr(ci, 2);
-                            if (/^C:/i.test(sub)) {
-                                sout += sub;
-                                ci += sub.length - 1; //  skip the end of the section id
-                                break;
-                            }
-
-                            if (c >= 'A' && c <= 'G') {
-                                chordNumber = chordLetterToNumber(c);
-                                state = 1;
-                                break;
-                            }
-
-                            if (chords.startsWith('maj', ci)) {
-                                sout += 'maj';
-                                ci += 2;
-                            } else if (chords.startsWith('sus', ci)) {
-                                sout += 'sus';
-                                ci += 2;
-                            } else if ((c >= '0' && c <= '9')
-                                    || c === 'm'
-                                    || c === ' ' || c === '-' || c === '|' || c === '/'
-                                    || c === '\n'
-                                    || c === js_delta
-                                    ) {
-                                sout += c;
-                            } else {	//  don't parse the rest
-                                sout += c;
-                                state = 10;
-                            }
-                            break;
-
-                        case 10: //	wait for newline
-                            sout += c;
-                            if (c === '\n')
-                                state = 0;
-                            break;
-
-                        case 11: //	wait for newline or closing paren
-                            sout += c;
-                            if (c === '\n' || c === ')')
-                                state = 0;
-                            break;
-                    }
-                }
-                return sout;
+               return clientSong.transcribe(chords, halfsteps);
             }
 
-            function chordLetterToNumber(letter) {
-                let i = letter.charCodeAt() - 'A'.charCodeAt();
-                //                            a  a# b  c  c# d  d# e  f f#  g  g#
-                //                            0  1  2  3  4  5  6  7  8  9  10 11
-                const chordLetterToNumber = [0, 2, 3, 5, 7, 8, 10];
-                return chordLetterToNumber[i];
-            }
-            function chordNumberToLetter(n) {
-
-                n = n % 12;
-                if (n < 0)
-                    n += 12;
-                //                            a     a#    b    c    c#    d    d#    e    f    f#    g    g#
-                //                            0     1     2    3    4     5    6     7    8    9     10   11
-                const chordNumberToLetter = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
-                return chordNumberToLetter[n];
-            }
 
             function makeTOC(type)
             {
