cleaned up search presentation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -176,6 +176,7 @@ Beat vs measure resolution on a section basis
                 width: 80%;
             }
             .mediumTextEntry {
+                font-size: 20px;
                 width: 30ch;
             }
             .smallTextEntry {
@@ -1665,7 +1666,7 @@ Beat vs measure resolution on a section basis
 
         <div class="toc">
             <h1>Lyrics</h1>
-            <p>Search: <input type="text" id="searchEntry" class="mediumTextEntry">
+            <p>Search: <input type="search" id="searchEntry" placeholder="title or artist..." class="mediumTextEntry">
             </p>
             <table border="0" id="songList" >
             </table>
