java class obfuscation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,9 @@ search
 # vs b
 fontsize 
 pop the colors on beat transitions
+return to the search after song play
+remove list during edit
+put edited song in view after edit
 fix ctl-key on mac
 
 control s to save when editing a song
@@ -42,6 +45,7 @@ Beat vs measure resolution on a section basis
 
 <html>
     <head>
+        <link rel="shortcut icon" href="images/runningsmall.ico" />
         <title>Lyrics</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
