first pass at Song.generateHtmlChordTable()

--- a/src/main/webapp/bassStudyTool.html
+++ b/src/main/webapp/bassStudyTool.html
@@ -5,6 +5,8 @@ All rights reserved.
 
 space bar should do the last type of play/loop
 loopN from end starts at first bar in song
+should loop starting and/or ending on a rest
+longer file name text area
 -->
 
 <html lang="en">
